--- a/addon/components/g-map/marker-clusterer.hbs
+++ b/addon/components/g-map/marker-clusterer.hbs
@@ -1,1 +1,1 @@
-{{yield (hash marker=(component "g-map/marker" getContext=(fn this.getMarker)))}}
+{{yield (hash marker=(component "g-map/marker" getContext=this.getMarker))}}
