Implement update hook, i.e. reuse existing cluster
- Add a basic demo to the dummy app
- Implement an update method that:
  1. updates the options
  2. removes markers that were removed
  3. adds markers that were added
  4. repaints the clusters
- Update the tests to rely on retaining access to the cluster component.
  This is essentially an additional test assertion that the update
  method is working as expected.

Fixes #8.

--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -2,3 +2,18 @@
   width: 500px;
   height: 500px;
 }
+
+.gm-style-button {
+  background: rgb(255, 255, 255) none repeat scroll 0% 0%;
+  border: 0px none;
+  margin: 10px;
+  margin-bottom: 20px;
+  padding: 10px;
+  text-transform: none;
+  appearance: none;
+  cursor: pointer;
+  user-select: none;
+  border-radius: 2px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px -1px;
+  font-family: Roboto, Arial, sans-serif;
+}
